<resources>
    <string name="app_name">P8Pro22</string>
    <string name="beranda">Beranda</string>
    <string name="jasa_pengguna">Jasa Pengguna</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="profil">Profil</string>
    <string name="logout">Logout</string>
    <string name="nama_header">Nama Header</string>
    <string name="email_header">Email Header</string>
    <string name="image_header">image header</string>
    <string name="fragment_beranda">Ini fragment Beranda Pengguna</string>
    <string name="fragment_jasa">Ini fragment Jasa Pengguna</string>
    <string name="fragment_profil">Ini fragment Profil Pengguna</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--splash screen-->
    <string name="icon_url">https://www.flaticon.com/</string>
    <!--form login-->
    <string name="judul_activity_login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="judul_daftar">Tidak Punya Akun, <b>Daftar</b></string>
    <string name="lupa_password">Lupa <b>password</b></string>
    <string name="atau_login">Atau Login dengan</string>
    <!--register-->
    <string name="nama">Nama</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <array name="jenis_kelamin">
        <item>Jenis Kelamin</item>
        <item>Pria</item>
        <item>Wanita</item>
    </array>
    <string name="no_hp">Nomor HP</string>
    <string name="alamat">Alamat</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="submit">Submit</string>
    <!--fragment profile-->
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="waktu_sesi">Waktu Sesi</string>
    <string name="myname">Desi Rahmawati</string>
    <string name="mybirth">14 Desember</string>
    <string name="mygender">Wanita</string>
    <string name="myphone">0852-7447-2585</string>
    <string name="myaddres">Jl. Antara gg. Abdul muluk , Bengkalis - Riau</string>
    <string name="myemail">rahmawatidesi730@gmail.com</string>
    <string name="mysession">18-06-2022 08:00:00</string>
    <string name="edit_profil">Ubah Profil</string>
    <string name="hapus_akun">Hapus Akun</string>
    <!--form edit profile-->
    <string name="judul_password">Silahkan kosongkan password, jika tidak mau mengubahnya!</string>
    <string name="service_ac_barokah">Service AC Barokah</string>
    <string name="deskripsi_ringkas">Melayani service ac rumah, kantor, gedung dll</string>
    <string name="rating">4</string>
    <!--form detail jasa-->
    <string name="nama_jasa">Nama Jasa</string>
    <string name="penyedia">Penyedia</string>
    <string name="kontak">Kontak</string>
    <string name="newrating">Rating</string>
    <string name="deskripsi_singkat">Deskripsi Singkat</string>
    <string name="uraian_deskripsi">Uraian Deskripsi</string>
</resources>